test/errors/extern2.ls

#OUTPUT
#Syntax Error: Expected function name.
# -> [10] extern func (s:str, ...)
#
#END

#RET 1

extern func (s:str, ...)

func main -> int
begin
    return 0;
end

